<resources>
    <string name="app_name">SHome</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Drawer items -->
    <string name="drawer_item_main">Main</string>
    <string name="drawer_item_greenhouse">Greenhouse</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_climateplan">Climate plan</string>
    <string name="drawer_item_contact">Contact</string>

    <string name="open">open navigation drawer</string>
    <string name="close">close navigation drawer</string>

    <!-- Screens -->
    <!-- Fragment Main -->
    <string name="main_max_usage_title">Max Usage</string>
    <string name="main_max_usage_value">200</string>
    <string name="main_min_usage_title">Min Usage</string>
    <string name="main_min_usage_value">100</string>
    <string name="main_target_temperature_title">Target Temperature</string>
    <string name="main_target_temperature_value">21</string>
    <string name="main_graphic_title">Energy usage</string>
    <string name="main_histogram_title">Energy savings</string>
    <string name="main_fab_prompt">\tPress to change</string>

    <!-- Fragment Contact -->
    <string name="contact_message_title">Message to the app developers:</string>
    <string name="contact_message_value"> </string>

    <!--Activity greenhouse -->
    <string name="greenhouse_humidity_title">Humidity</string>
    <string name="greenhouse_temperature_title">Temperature</string>
    <string name="greenhouse_pressure_title">Pressure</string>
    <string name="greenhouse_luminosity_title">Luminosity</string>
    <string name="greenhouse_tab_title">Room\t</string>
    <string name="greenhouse_toast">New value is:\t</string>

    <!--Activity Settings -->
    <string name="settings_category_general_title">General</string>
    <string name="settings_category_microclimate_title">Microclimate</string>
    <string name="settings_category_security_title">Security</string>
    <string name="settings_category_energy_usage_title">Energy options</string>

    <string name="settings_energy_usage_min">Min usage</string>
    <string name="settings_energy_usage_max">Max usage</string>
    <string name="settings_energy_usage_target_temperature">Target temperature</string>
    <string name="settings_energy_usage_min_prompt">Minimum possible energy usage of your system</string>
    <string name="settings_energy_usage_max_prompt">Maximum possible energy usage of your system</string>
    <string name="settings_energy_usage_target_temperature_prompt">
        The averaged temperature that you want to establish during prognosis period
    </string>
    
    <string name="settings_microclimate_common">Common climate</string>
    <string name="settings_microclimate_common_prompt">
        The same microclimate parameters for the whole house
    </string>
    <string name="settings_microclimate_temperature">Temperature °C</string>
    <string name="settings_microclimate_temperature_prompt">Set the temperature</string>
    <string name="settings_microclimate_humidity">Humidity %</string>
    <string name="settings_microclimate_humidity_prompt">Set the humidity</string>
    <string name="settings_microclimate_luminosity">Luminosity %</string>
    <string name="settings_microclimate_luminosity_prompt">
        Set the luminosity(backlight brightness)
    </string>
    
    <string name="settings_general_cloud_services">Cloud services</string>
    <string name="settings_general_cloud_services_prompt">
        This option if is selected will allow the app to use cloud servises for making data backup
    </string>
    <string name="settings_general_cloud_services_dropbox">Dropbox</string>
    <string name="settings_general_cloud_services_gdrive">Google Drive</string>
    <string name="settings_general_prognosis">Neural network</string>
    <string name="settings_general_prognosis_prompt">
        This is used to predict an energy usage
    </string>

    <!--Activity Settings keys -->
    <string name="settings_key_message_to_devs">KEY_MESSAGE_DEVS</string>
    <string name="settings_key_dropbox_token">KEY_TOKEN_PAIR</string>
    <string name="settings_key_category_microclimate">KEY_CATEGORY_MICROCLIMATE</string>
    <string name="settings_key_category_energy_usage">KEY_CATEGORY_ENERGY_USAGE</string>
    <string name="settings_key_category_general">KEY_CATEGORY_GENERAL</string>
    <string name="settings_key_category_security">KEY_CATEGORY_SECURITY</string>
    <string name="settings_key_common_climate">KEY_MICROCLIMATE_COMMON</string>
    <string name="settings_key_temperature">KEY_MICROCLIMATE_TEMPERATURE</string>
    <string name="settings_key_humidity">KEY_MICROCLIMATE_HUMIDITY</string>
    <string name="settings_key_luminosity">KEY_MICROCLIMATE_LUMINOSITY</string>
    <string name="settings_key_prognosis">KEY_PROGNOSIS</string>
    <string name="settings_key_cloud_services">KEY_CLOUD_SERVICES</string>
    <string name="settings_key_cloud_services_dropbox">KEY_CLOUD_SERVICES_DROPBOX</string>
    <string name="settings_key_cloud_services_gdrive">KEY_CLOUD_SERVICES_GOOGLE_DRIVE</string>
    <string name="settings_key_energy_usage_min">KEY_ENERGY_USAGE_MIN</string>
    <string name="settings_key_energy_usage_max">KEY_ENERGY_USAGE_MAX</string>
    <string name="settings_key_energy_usage_target_temperature">KEY_ENERGY_USAGE_TARGET_TEMPERATURE</string>


</resources>
