<?xml version="1.0" encoding="utf-8"?>
    <PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="10dp">

        <PreferenceCategory
            android:title="@string/settings_category_microclimate_title"
            android:key="@string/settings_key_category_microclimate">
            <CheckBoxPreference
                android:title="@string/settings_microclimate_common"
                android:summary="@string/settings_microclimate_common_prompt"
                android:key="@string/settings_key_common_climate"
                android:defaultValue="false"/>

            <EditTextPreference
                android:title="@string/settings_microclimate_temperature"
                android:summary="@string/settings_microclimate_temperature_prompt"
                android:key="@string/settings_key_temperature"
                android:dependency="@string/settings_key_common_climate">
            </EditTextPreference>

            <EditTextPreference
                android:title="@string/settings_microclimate_humidity"
                android:summary="@string/settings_microclimate_humidity_prompt"
                android:key="@string/settings_key_humidity"
                android:dependency="@string/settings_key_common_climate">
            </EditTextPreference>

            <EditTextPreference
                android:title="@string/settings_microclimate_luminosity"
                android:summary="@string/settings_microclimate_luminosity_prompt"
                android:key="@string/settings_key_luminosity"
                android:dependency="@string/settings_key_common_climate">
            </EditTextPreference>
        </PreferenceCategory>


        <PreferenceCategory
            android:title="@string/settings_category_general_title"
            android:key="@string/settings_key_category_general">
            <CheckBoxPreference
                android:title="@string/settings_general_prognosis"
                android:summary="@string/settings_general_prognosis_prompt"
                android:key="@string/settings_key_prognosis"
                android:defaultValue="true"/>

            <CheckBoxPreference
                android:title="@string/settings_general_cloud_services"
                android:summary="@string/settings_general_cloud_services_prompt"
                android:key="@string/settings_key_cloud_services"
                android:defaultValue="true"/>

            <CheckBoxPreference
                android:title="@string/settings_general_cloud_services_dropbox"
                android:key="@string/settings_key_cloud_services_dropbox"
                android:defaultValue="true"
                android:dependency="@string/settings_key_cloud_services"/>

            <CheckBoxPreference
                android:title="@string/settings_general_cloud_services_gdrive"
                android:key="@string/settings_key_cloud_services_gdrive"
                android:defaultValue="false"
                android:dependency="@string/settings_key_cloud_services"/>
        </PreferenceCategory>


        <PreferenceCategory
            android:title="@string/settings_category_security_title"
            android:key="@string/settings_key_category_security">

        </PreferenceCategory>

    </PreferenceScreen>


    <!--<ListPreference
        android:title="Download Details"
        android:summary="Select the kind of data that you would like to download"
        android:key="downloadType"
        android:defaultValue="1"
        android:entries="@array/listArray"
        android:entryValues="@array/listValues" /> -->