<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="left|top"
        android:weightSum="1"
        android:id="@+id/header"
        android:background="@drawable/background_city">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/main_max_usage_title"
                android:id="@+id/textView8"
                android:textColor="@color/text_color_light"
                android:background="@color/blinkBlueColor"
                android:gravity="center" />

            <Space
                android:layout_width="140dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/editText5"
                android:layout_weight="1.73"
                android:textColor="@color/text_color_light"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/main_max_usage_value"
                android:textAlignment="center"
                android:gravity="center"
                android:textIsSelectable="true"
                android:background="@color/blinkBlueColor" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/main_min_usage_title"
                android:id="@+id/textView9"
                android:textColor="@color/text_color_light"
                android:background="@color/blinkBlueColor"
                android:gravity="center" />

            <Space
                android:layout_width="140dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/editText6"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"
                android:textColor="@color/text_color_light"
                android:text="@string/main_min_usage_value"
                android:gravity="center"
                android:textIsSelectable="true"
                android:background="@color/blinkBlueColor" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="53dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/main_target_temperature_title"
                android:id="@+id/textView10"
                android:textColor="@color/text_color_light"
                android:background="@color/blinkBlueColor"
                android:gravity="top|center" />


            <Space
                android:layout_width="140dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/editText7"
                android:layout_weight="1.68"
                android:textColor="@color/text_color_light"
                android:theme="@style/AppTheme"
                android:text="@string/main_target_temperature_value"
                android:gravity="center"
                android:textIsSelectable="true"
                android:background="@color/blinkBlueColor" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:id="@+id/fab_main"
        android:layout_gravity="right"
        android:layout_weight="3.25"
        android:elevation="1dp"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/header"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="-25dp"
        android:background="@drawable/circle"
        android:src="@drawable/fab_next_ico" />

    <view
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="android.support.v7.widget.RecyclerView"
        android:id="@+id/recycler_view_main"
        android:layout_gravity="left|bottom"
        android:visibility="visible"
        android:nestedScrollingEnabled="true"
        android:layout_weight="0.73"
        android:layout_below="@+id/header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/main_fab_prompt"
        android:background="@color/material_drawer_accent"
        android:textColor="@color/text_color_light"
        android:id="@+id/text_promt"
        android:layout_alignTop="@+id/fab_main"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
